test_results_defects/infer_test/littlemem_st/report.txt
#0
/home/cs4239/Desktop/cs5218/Benchmarks/01.w_Defects/littlemem_st.c:36: error: Dead Store
  The value written to &ret (type int) is never used.
  34. 
  35. 	p = (littlemem_st_001_s_001 *)buf;
  36. 	ret = p->c; /*Tool should detect this line as error*/ /*ERROR:Little Memory or Overflow*/
       ^
  37.     printf("%d \n",p->c);
  38. }

Found 1 issue
  Issue Type(ISSUED_TYPE_ID): #
      Dead Store(DEAD_STORE): 1
